--- a/UI/frontend/src/index.css
+++ b/UI/frontend/src/index.css
@@ -36,6 +36,7 @@
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  overflow-x: hidden;
 }
 
 [data-theme='dark'] {
@@ -63,6 +64,7 @@ body {
   background-color: var(--bg);
   color: var(--text);
   transition: background-color 0.3s, color 0.3s;
+  overflow-x: hidden;
 }
 
 a {
